# protobuf-perlxs

./: ChangeLog  Makefile.am  Makefile.in  ProjectHome.md  TODO  configure  configure.ac
examples/: Makefile.PL.in  README  test.pl
examples/embedded/: Makefile.PL.in
examples/types/: Makefile.PL.in
src/: Makefile.am  Makefile.in
src/google/protobuf/compiler/perlxs/: main.cc  perlxs_generator.cc  perlxs_generator.h  perlxs_helpers.cc  perlxs_helpers.h
