SUBDIRS = src

EXTRA_DIST = \
	examples/README \
	examples/simple/Makefile.PL.in \
	examples/simple/person.proto \
	examples/simple/README \
	examples/simple/test.pl \
	examples/embedded/Makefile.PL.in \
	examples/embedded/error.proto \
	examples/embedded/README \
	examples/embedded/test.pl \
	examples/types/Makefile.PL.in \
	examples/types/types.proto \
	examples/types/README \
	examples/types/test.pl
